--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@fast-csv/parse": "^5.0.0",
-    "@types/mustache": "^4.2.5"
+    "@types/mustache": "^4.2.5",
+    "mustache": "^4.2.0"
   }
 }
