--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@fast-csv/parse": "^5.0.0",
     "@types/mustache": "^4.2.5",
+    "csvtojson": "^2.0.10",
     "mustache": "^4.2.0"
   }
 }
