--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@types/mustache": "^4.2.5",
+    "ajv": "^8.14.0",
     "csvtojson": "^2.0.10",
     "mustache": "^4.2.0"
   }
