--- a/package.json
+++ b/package.json
@@ -46,20 +46,25 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/mocha": "^10.0.6",
-    "@types/node": "18.x",
-    "@types/vscode": "^1.89.0",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
-    "@vscode/test-cli": "^0.0.9",
-    "@vscode/test-electron": "^2.3.9",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.5"
+    "@types/mocha": "^10.0.10",
+    "@types/node": "24.x",
+    "@types/vscode": "^1.104.0",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
+    "@vscode/test-cli": "^0.0.11",
+    "@vscode/test-electron": "^2.5.2",
+    "eslint": "^9.35.0",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@types/mustache": "^4.2.5",
-    "ajv": "^8.14.0",
+    "@types/mustache": "^4.2.6",
+    "ajv": "^8.17.1",
+    "antlr4": "^4.13.2",
+    "axios": "^1.12.1",
     "csvtojson": "^2.0.10",
-    "mustache": "^4.2.0"
+    "fsh-sushi": "^3.16.4",
+    "gofsh": "^2.5.1",
+    "mustache": "^4.2.0",
+    "undici-types": "^7.16.0"
   }
 }
