--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"module": "node20",
+		"module": "node20",  // Due to issues after installing gofsh.
 		"target": "ES2022",
 		"outDir": "out",
 		"lib": [
@@ -8,7 +8,7 @@
 		],
 		"sourceMap": true,
 		"rootDir": "src",
-		"skipLibCheck": true,
+		"skipLibCheck": true,  // Due to issues after installing gofsh.
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
